2010-07-01	Vinu Rajashekhar <vinutheraj@gmail.com>

	PR 1597/cpukit
	* libcsupport/Makefile.am, libcsupport/src/chown.c: Add lchown() and
	utimes().
	* libcsupport/src/lchown.c, libcsupport/src/utimes.c: New files.

2010-07-01	Vinu Rajashekhar <vinutheraj@gmail.com>

	PR 1529/cpukit
	* utime.c: Change file access time and modified time to
	current time if pointer to struct utimbuf is NULL.
	* imfs_utime.c: Upon successful completion, imfs_utime() marks
	the time of the last file status change, st_ctime, to be updated.

2010-07-01	Joel Sherrill <joel.sherrill@oarcorp.com>

	* libcsupport/src/rtems_memalign.c, score/include/rtems/score/heap.h:
	Remove stray references to malloc boundary.

2010-07-01	Joel Sherrill <joel.sherrilL@OARcorp.com>

	PR 1594/filesystem
	* libfs/src/imfs/memfile.c: Include assert.h

2010-07-01	Joel Sherrill <joel.sherrill@oarcorp.com>

	* libcsupport/src/getegid.c, libcsupport/src/gxx_wrappers.c,
	libcsupport/src/issetugid.c: Formatting and spacing.

2010-07-01	Jennifer Averett <Jennifer.Averett@OARcorp.com>

	* libcsupport/src/chdir.c, libcsupport/src/chmod.c,
	libcsupport/src/chown.c, libcsupport/src/close.c,
	libcsupport/src/eval.c, libcsupport/src/fchdir.c,
	libcsupport/src/fchmod.c, libcsupport/src/fchown.c,
	libcsupport/src/fcntl.c, libcsupport/src/fdatasync.c,
	libcsupport/src/freenode.c, libcsupport/src/fstat.c,
	libcsupport/src/fsync.c, libcsupport/src/ftruncate.c,
	libcsupport/src/ioctl.c, libcsupport/src/link.c,
	libcsupport/src/lseek.c, libcsupport/src/mknod.c,
	libcsupport/src/mount.c, libcsupport/src/open.c,
	libcsupport/src/read.c, libcsupport/src/readlink.c,
	libcsupport/src/readv.c, libcsupport/src/rmdir.c,
	libcsupport/src/stat.c, libcsupport/src/statvfs.c,
	libcsupport/src/symlink.c, libcsupport/src/unlink.c,
	libcsupport/src/unmount.c, libcsupport/src/write.c: Removed
	filesystem checks for NULL methods checks from the main posix
	rountines. These are now required to have at a miminum default
	routines in the tables.
